src/parser/MainGrammarParser.ts
// Generated from c:/Users/minip/source/repos/ahk2-antlr4-demo/src/grammar/MainGrammar.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { MainGrammarListener } from "./MainGrammarListener.js";
import { MainGrammarVisitor } from "./MainGrammarVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class MainGrammarParser extends antlr.Parser {
    public static readonly AND = 1;
    public static readonly OR = 2;
    public static readonly NOT = 3;
    public static readonly EQ = 4;
    public static readonly COMMA = 5;
    public static readonly SEMI = 6;
    public static readonly LPAREN = 7;
    public static readonly RPAREN = 8;
    public static readonly LCURLY = 9;
    public static readonly RCURLY = 10;
    public static readonly INT = 11;
    public static readonly ID = 12;
    public static readonly WS = 13;
    public static readonly RULE_program = 0;
    public static readonly RULE_stat = 1;
    public static readonly RULE_def = 2;
    public static readonly RULE_expr = 3;
    public static readonly RULE_func = 4;

    public static readonly literalNames = [
        null, "'and'", "'or'", "'not'", "'='", "','", "';'", "'('", "')'", 
        "'{'", "'}'"
    ];

    public static readonly symbolicNames = [
        null, "AND", "OR", "NOT", "EQ", "COMMA", "SEMI", "LPAREN", "RPAREN", 
        "LCURLY", "RCURLY", "INT", "ID", "WS"
    ];
    public static readonly ruleNames = [
        "program", "stat", "def", "expr", "func",
    ];

    public get grammarFileName(): string { return "MainGrammar.g4"; }
    public get literalNames(): (string | null)[] { return MainGrammarParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return MainGrammarParser.symbolicNames; }
    public get ruleNames(): string[] { return MainGrammarParser.ruleNames; }
    public get serializedATN(): number[] { return MainGrammarParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, MainGrammarParser._ATN, MainGrammarParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, MainGrammarParser.RULE_program);
        try {
            this.state = 16;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 10;
                this.stat();
                this.state = 11;
                this.match(MainGrammarParser.EOF);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 13;
                this.def();
                this.state = 14;
                this.match(MainGrammarParser.EOF);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public stat(): StatContext {
        let localContext = new StatContext(this.context, this.state);
        this.enterRule(localContext, 2, MainGrammarParser.RULE_stat);
        try {
            this.state = 26;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 18;
                this.match(MainGrammarParser.ID);
                this.state = 19;
                this.match(MainGrammarParser.EQ);
                this.state = 20;
                this.expr(0);
                this.state = 21;
                this.match(MainGrammarParser.SEMI);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 23;
                this.expr(0);
                this.state = 24;
                this.match(MainGrammarParser.SEMI);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public def(): DefContext {
        let localContext = new DefContext(this.context, this.state);
        this.enterRule(localContext, 4, MainGrammarParser.RULE_def);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 28;
            this.match(MainGrammarParser.ID);
            this.state = 29;
            this.match(MainGrammarParser.LPAREN);
            this.state = 30;
            this.match(MainGrammarParser.ID);
            this.state = 35;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 31;
                this.match(MainGrammarParser.COMMA);
                this.state = 32;
                this.match(MainGrammarParser.ID);
                }
                }
                this.state = 37;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 38;
            this.match(MainGrammarParser.RPAREN);
            this.state = 39;
            this.match(MainGrammarParser.LCURLY);
            this.state = 43;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 6152) !== 0)) {
                {
                {
                this.state = 40;
                this.stat();
                }
                }
                this.state = 45;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 46;
            this.match(MainGrammarParser.RCURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expr(): ExprContext;
    public expr(_p: number): ExprContext;
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 6;
        this.enterRecursionRule(localContext, 6, MainGrammarParser.RULE_expr, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 54;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                {
                this.state = 49;
                this.match(MainGrammarParser.ID);
                }
                break;
            case 2:
                {
                this.state = 50;
                this.match(MainGrammarParser.INT);
                }
                break;
            case 3:
                {
                this.state = 51;
                this.func();
                }
                break;
            case 4:
                {
                this.state = 52;
                this.match(MainGrammarParser.NOT);
                this.state = 53;
                this.expr(3);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 64;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 6, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 62;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
                    case 1:
                        {
                        localContext = new ExprContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, MainGrammarParser.RULE_expr);
                        this.state = 56;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 57;
                        this.match(MainGrammarParser.AND);
                        this.state = 58;
                        this.expr(3);
                        }
                        break;
                    case 2:
                        {
                        localContext = new ExprContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, MainGrammarParser.RULE_expr);
                        this.state = 59;
                        if (!(this.precpred(this.context, 1))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                        }
                        this.state = 60;
                        this.match(MainGrammarParser.OR);
                        this.state = 61;
                        this.expr(2);
                        }
                        break;
                    }
                    }
                }
                this.state = 66;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 6, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public func(): FuncContext {
        let localContext = new FuncContext(this.context, this.state);
        this.enterRule(localContext, 8, MainGrammarParser.RULE_func);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 67;
            this.match(MainGrammarParser.ID);
            this.state = 68;
            this.match(MainGrammarParser.LPAREN);
            this.state = 69;
            this.expr(0);
            this.state = 74;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 70;
                this.match(MainGrammarParser.COMMA);
                this.state = 71;
                this.expr(0);
                }
                }
                this.state = 76;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 77;
            this.match(MainGrammarParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 3:
            return this.expr_sempred(localContext as ExprContext, predIndex);
        }
        return true;
    }
    private expr_sempred(localContext: ExprContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 2);
        case 1:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!MainGrammarParser.__ATN) {
            MainGrammarParser.__ATN = new antlr.ATNDeserializer().deserialize(MainGrammarParser._serializedATN);
        }

        return MainGrammarParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(MainGrammarParser.literalNames, MainGrammarParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return MainGrammarParser.vocabulary;
    }

    private static readonly decisionsToDFA = MainGrammarParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public stat(): StatContext | null {
        return this.getRuleContext(0, StatContext);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.EOF, 0)!;
    }
    public def(): DefContext | null {
        return this.getRuleContext(0, DefContext);
    }
    public override get ruleIndex(): number {
        return MainGrammarParser.RULE_program;
    }
    public override enterRule(listener: MainGrammarListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: MainGrammarListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: MainGrammarVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class StatContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.ID, 0);
    }
    public EQ(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.EQ, 0);
    }
    public expr(): ExprContext {
        return this.getRuleContext(0, ExprContext)!;
    }
    public SEMI(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.SEMI, 0)!;
    }
    public override get ruleIndex(): number {
        return MainGrammarParser.RULE_stat;
    }
    public override enterRule(listener: MainGrammarListener): void {
        if(listener.enterStat) {
             listener.enterStat(this);
        }
    }
    public override exitRule(listener: MainGrammarListener): void {
        if(listener.exitStat) {
             listener.exitStat(this);
        }
    }
    public override accept<Result>(visitor: MainGrammarVisitor<Result>): Result | null {
        if (visitor.visitStat) {
            return visitor.visitStat(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class DefContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode[];
    public ID(i: number): antlr.TerminalNode | null;
    public ID(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MainGrammarParser.ID);
    	} else {
    		return this.getToken(MainGrammarParser.ID, i);
    	}
    }
    public LPAREN(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.LPAREN, 0)!;
    }
    public RPAREN(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.RPAREN, 0)!;
    }
    public LCURLY(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.LCURLY, 0)!;
    }
    public RCURLY(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.RCURLY, 0)!;
    }
    public COMMA(): antlr.TerminalNode[];
    public COMMA(i: number): antlr.TerminalNode | null;
    public COMMA(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MainGrammarParser.COMMA);
    	} else {
    		return this.getToken(MainGrammarParser.COMMA, i);
    	}
    }
    public stat(): StatContext[];
    public stat(i: number): StatContext | null;
    public stat(i?: number): StatContext[] | StatContext | null {
        if (i === undefined) {
            return this.getRuleContexts(StatContext);
        }

        return this.getRuleContext(i, StatContext);
    }
    public override get ruleIndex(): number {
        return MainGrammarParser.RULE_def;
    }
    public override enterRule(listener: MainGrammarListener): void {
        if(listener.enterDef) {
             listener.enterDef(this);
        }
    }
    public override exitRule(listener: MainGrammarListener): void {
        if(listener.exitDef) {
             listener.exitDef(this);
        }
    }
    public override accept<Result>(visitor: MainGrammarVisitor<Result>): Result | null {
        if (visitor.visitDef) {
            return visitor.visitDef(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ExprContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.ID, 0);
    }
    public INT(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.INT, 0);
    }
    public func(): FuncContext | null {
        return this.getRuleContext(0, FuncContext);
    }
    public NOT(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.NOT, 0);
    }
    public expr(): ExprContext[];
    public expr(i: number): ExprContext | null;
    public expr(i?: number): ExprContext[] | ExprContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExprContext);
        }

        return this.getRuleContext(i, ExprContext);
    }
    public AND(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.AND, 0);
    }
    public OR(): antlr.TerminalNode | null {
        return this.getToken(MainGrammarParser.OR, 0);
    }
    public override get ruleIndex(): number {
        return MainGrammarParser.RULE_expr;
    }
    public override enterRule(listener: MainGrammarListener): void {
        if(listener.enterExpr) {
             listener.enterExpr(this);
        }
    }
    public override exitRule(listener: MainGrammarListener): void {
        if(listener.exitExpr) {
             listener.exitExpr(this);
        }
    }
    public override accept<Result>(visitor: MainGrammarVisitor<Result>): Result | null {
        if (visitor.visitExpr) {
            return visitor.visitExpr(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class FuncContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.ID, 0)!;
    }
    public LPAREN(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.LPAREN, 0)!;
    }
    public expr(): ExprContext[];
    public expr(i: number): ExprContext | null;
    public expr(i?: number): ExprContext[] | ExprContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExprContext);
        }

        return this.getRuleContext(i, ExprContext);
    }
    public RPAREN(): antlr.TerminalNode {
        return this.getToken(MainGrammarParser.RPAREN, 0)!;
    }
    public COMMA(): antlr.TerminalNode[];
    public COMMA(i: number): antlr.TerminalNode | null;
    public COMMA(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MainGrammarParser.COMMA);
    	} else {
    		return this.getToken(MainGrammarParser.COMMA, i);
    	}
    }
    public override get ruleIndex(): number {
        return MainGrammarParser.RULE_func;
    }
    public override enterRule(listener: MainGrammarListener): void {
        if(listener.enterFunc) {
             listener.enterFunc(this);
        }
    }
    public override exitRule(listener: MainGrammarListener): void {
        if(listener.exitFunc) {
             listener.exitFunc(this);
        }
    }
    public override accept<Result>(visitor: MainGrammarVisitor<Result>): Result | null {
        if (visitor.visitFunc) {
            return visitor.visitFunc(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
